@@ -63,6 +63,7 @@ Fixes:
    * Fix the naviframe to delete contents which are preserved_on set if the naviframe is deleted.
    * Fix the naviframe to clear the title contents when it's item is deleted.
    * Fix entry to enable have_selection only when a text is actually selected.
+   * Fix the naviframe to clear the text parts when it's item is deleted.
 
 Removals:
 
